refactor: update conduit API, tasks, and core classes
- Refactor ConduitAPIClient, Differential, DifferentialClient, HarbormasterClient
- Update lint, unit result classes for improved type safety
- Update tasks (PostComment, SendHarbormaster) for new API patterns
- Update UberallsClient
- Update all corresponding tests
- Add coverage plugin detection logging in PhabricatorNotifier